--- a/biblio.bib
+++ b/biblio.bib
@@ -31,7 +31,7 @@
   title = "Anomaly detection --- {Wikipedia}{,} The Free Encyclopedia",
   year = "2023",
   url = "\url{https://en.wikipedia.org/w/index.php?title=Anomaly_detection&oldid=1188321736}",
-  note = "[Internet; visitado 11-noviembre-2023]"
+  note = "[Internet; visitado 29-diciembre-2023]"
 }
 
 @misc{eswiki:155256141,
@@ -39,7 +39,7 @@
   title = "Detección de anomalías --- {Wikipedia}{,} La enciclopedia libre",
   year = "2023",
   url = "\url{https://es.wikipedia.org/w/index.php?title=Detecci%C3%B3n_de_anomal%C3%ADas&oldid=155256141}",
-  note = "[Internet; visitado 11-noviembre-2023]"
+  note = "[Internet; visitado 29-diciembre-2023]"
 }
 
 @article{chandola2009anomaly,
@@ -95,7 +95,7 @@
   title = {Ley Orgánica 3/2018 de Protección de Datos Personales y garantía de los derechos digitales},
   author = {España},
   year = {2018},
-  url = {\url{https://www.boe.es/eli/es/lo/2018/12/05/3/con}},
+  url = {\url{hNttps://www.boe.es/eli/es/lo/2018/12/05/3/con}},
   note = "«BOE» núm. 294, de 6 de diciembre de 2018, páginas 119033 a 119101 (69 págs.)"
 }
 
@@ -108,4 +108,64 @@
   number  = {66},
   pages   = {1961--1998},
   url     = {http://jmlr.org/papers/v6/wong05a.html}
+}
+
+@INPROCEEDINGS{ieee2016wsn,
+  author={Abid, Aymen and Kachouri, Abdennaceur and Mahfoudhi, Adel},
+  booktitle={2016 2nd International Conference on Advanced Technologies for Signal and Image Processing (ATSIP)},
+  title={Anomaly detection through outlier and neighborhood data in Wireless Sensor Networks},
+  year={2016},
+  pages={26-30},
+  doi={10.1109/ATSIP.2016.7523045}
+}
+
+@misc{netflix2015rad,
+  author = {Wong, Jeffrey and Colburn, Chris and Meeks, Elijah and Vedaraman, Shankar},
+  title = {{RAD} — Outlier Detection on Big Data},
+  year = {2015},
+  url = {\url{https://netflixtechblog.com/rad-outlier-detection-on-big-data-d6b0494371cc}},
+  note = {Netflix Technology Blog},
+  month = {Feb}
+}
+
+@misc{uber2015argos,
+  author = {Bell, Franziska},
+  title = {Identifying Outages with {Argos}, {Uber Engineering’s} Real-Time Monitoring and Root-Cause Exploration Tool},
+  year = {2015},
+  url = {\url{https://eng.uber.com/argos}},
+  note = {Uber Blog: Enigineering},
+}
+
+@misc{pinterest2019anomaly,
+  author = {Chen, Kevin and Overstreet, Brian},
+  title = {Building a real-time anomaly detection system for time series at {Pinterest}},
+  year = {2019},
+  url = {\url{https://medium.com/pinterest-engineering/building-a-real-time-anomaly-detection-system-for-time-series-at-pinterest-a833e6856ddd}},
+  note = {Pinterest Engineering Blog},
+}
+
+@misc{linkedin2019thirdeye,
+  author = {Pucher, Alexander and others},
+  title = {Introducing {ThirdEye}: {LinkedIn’s} Business-Wide Monitoring Platform},
+  year = {2019},
+  url = {\url{https://engineering.linkedin.com/blog/2019/01/introducing-thirdeye--linkedins-business-wide-monitoring-platfor}},
+  note = {LinkedIn Engineering},
+}
+
+@misc{pyod,
+  author = {Zhao, Yue and Nasrullah, Zain and Li, Zheng},
+  title = {{PyOD}: A {Python} Toolbox for Scalable Outlier Detection},
+  year = {2019},
+  url = {\url{https://www.jmlr.org/papers/volume20/19-011/19-011.pdf}},
+  journal = {Journal of Machine Learning Research},
+  volume = {20},
+  number = {96},
+  pages = {1-7},
+  month = {apr},
+}
+
+@misc{wolfram,
+  title = {{FindAnomalies}},
+  note = {Documentación de Mathematica},
+  url = {\url{https://reference.wolfram.com/language/ref/FindAnomalies.html}}
 }
