--- a/config.tex
+++ b/config.tex
@@ -20,7 +20,7 @@
 \titlespacing*{\section}{0pt}{\baselineskip}{0pt}
 
 \titleformat{\subsection}[block]
-  {\normalfont\normalsize\bfseries}{\thesubsection.}{4pt}{\normalsize}
+  {\normalfont\large\bfseries}{\thesubsection.}{4pt}{\normalsize\large}
 \titlespacing*{\subsection}{0pt}{0pt}{0pt}
 
 \titleformat{\subsubsection}[block]
