--- a/main.tex
+++ b/main.tex
@@ -17,13 +17,12 @@
 \usepackage{lastpage}
 \usepackage{stackengine}
 \usepackage{array}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{enumitem}
 \usepackage{float}
 
 \usepackage{hyperref} % Paquete para que las referencias funcionen, y permite introducir links
 \usepackage{xcolor} % Paquete para trabajar con colores (fondo de celdas, color del texto...)
-\usepackage{pdfpages} % Paquete para incluir páginas de otro PDF directamente
 \input{config.tex}
 
 
