--- a/sections/6_tools.tex
+++ b/sections/6_tools.tex
@@ -1,1 +1,23 @@
 \chapter{Herramientas y tecnologías utilizadas}
+Para el desarrollo de modelos de predicción de minería de excepciones, existen multitud de
+herramientas y tecnologías, algunas de ellas de código abierto, que facilitan el proceso de
+desarrollo. Este capítulo tiene como objetivo mencionar algunas de estas herramientas y
+tecnologías.
+
+\begin{itemize}
+	\item \textbf{ELKI} es un toolkit de minería de datos de código abierto escrito en Java. Está
+		diseñado para ser utilizado en investigación y en la industria, y es compatible con la mayoría
+		de sistemas operativos. Cuenta además con índices de aceleración especiales.
+	\item \textbf{PyOD} es una librería de Python de código abierto desarrollada específicamente
+		para la detección de anomalías.~\cite{pyod}
+	\item \textbf{scikit-learn} es una librería de Python de código abierto que recoge algoritmos
+		de detección de anomalías no supervisados. (Ver \nameref{chap:tecnicas})
+	\item \textbf{Wolfram Mathematica} es un software de matemáticas que incluye herramientas de
+		minería de datos y de aprendizaje automático de conjuntos de datos de varios
+		tipos.~\cite{wolfram}
+\end{itemize}
+
+Además de las herramientas mencionadas, las empresas que necesitan modelos y clasificadores más
+complejos suelen recurrir a la creación de herramientas propias que se adapten a sus necesidades
+y a los servicios y datos que ya tienen. Algunos ejemplos de estas empresas son las vistas en el
+capítulo anterior, como Netflix, Uber, Pinterest o LinkedIn.~(Ver \nameref{sect:reales})
