config: títulos en páginas secundarias, onesided

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, twoside, openany]{book}
+\documentclass[12pt, oneside, openany]{book}
 
 \usepackage{mathptmx} % Contiene una fuente similar a Times New Roman
 
