--- a/config.tex
+++ b/config.tex
@@ -43,13 +43,25 @@
 \def\AREA{\expandafter\MakeUppercase\expandafter{\area}}
 \def\SUBJECT{\expandafter\MakeUppercase\expandafter{\subject}}
 
+\fancyhf{}
+\fancyhead[L]{\includegraphics[height=16mm]{style/square.png}
+  \hspace{1em} \Longstack[l] {
+    \textbf{\SUBJECT} \newline
+    \textbf{\title}}
+  \newline \leftmark{}
+}
+\fancyhead[R]{\bfseries{Hoja \thepage{}~de~\pageref{LastPage}}}
+\fancyfoot[C]{\author}
+\renewcommand{\headrulewidth}{0pt} % default is 0pt
+\renewcommand{\footrulewidth}{0.4pt} % default is 0
+
 \fancypagestyle{plain}{%
   \fancyhf{}
   \fancyhead[L]{\includegraphics[height=16mm]{style/square.png}
     \hspace{1em} \Longstack[l]{
       \textbf{\SUBJECT} \newline
       \textbf{\title}}}
-  \fancyhead[R]{\bfseries{Hoja \thepage{} \hspace{1pt} de~\pageref{LastPage}}}
+  \fancyhead[R]{\bfseries{Hoja \thepage{}~de~\pageref{LastPage}}}
   \fancyfoot[C]{\author}
   \renewcommand{\headrulewidth}{0pt} % default is 0pt
   \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
