fix headheight warning

--- a/config.tex
+++ b/config.tex
@@ -43,6 +43,8 @@
 \def\AREA{\expandafter\MakeUppercase\expandafter{\area}}
 \def\SUBJECT{\expandafter\MakeUppercase\expandafter{\subject}}
 
+\setlength{\headheight}{65pt}
+
 \fancyhf{}
 \fancyhead[L]{\includegraphics[height=16mm]{style/square.png}
   \hspace{1em} \Longstack[l] {
