--- a/biblio.bib
+++ b/biblio.bib
@@ -169,3 +169,12 @@
   note = {Documentación de Mathematica},
   url = {\url{https://reference.wolfram.com/language/ref/FindAnomalies.html}}
 }
+
+@misc{herrera2004pre,
+  author       = {Herrera, Francisco and Riquelme, Roberto Ruiz},
+  howpublished = {\url{http://www.lsi.us.es/redmidas/IIreunion/trans/prepro.pdf}},
+  title        = {Preprocesamiento de Datos},
+  year         = {2004},
+  journal      = {Departamento de Ciencias de la Computación e Inteligencia Artificial, Universidad de Granada},
+  note         = {Presentación de la II Reunión de la Red Temática de Minería de Datos y Aprendizaje, 2004}
+}
