--- a/sections/3_pre.tex
+++ b/sections/3_pre.tex
@@ -1,4 +1,22 @@
 \chapter{Preprocesamiento de datos}\label{chap:pre}
+El preprocesamiento de datos es una fase crítica que implica la limpieza,
+transformación y preparación de los datos, en este caso previo a la aplicación
+de técnicas de detección de anomalías.
+
+\nocite{herrera2004pre}
+
+\subsection{¿Por qué es necesario?}
+Los datos que se obtienen de las fuentes de información suelen estar incompletos,
+contener errores o no ser adecuados para el problema que se quiere resolver.
+Por ello, es necesario realizar una serie de operaciones sobre los mismos para
+poder utilizarlos de forma efectiva.
+
+Además, la preparación del conjunto puede resultar en una reducción de la cantidad
+de datos a procesar, lo que puede suponer una mejora en la eficiencia del proceso
+a nivel global, uno de los problemas vistos en el capítulo~\ref{sec:issues}.
+
+\subsection{¿Cómo se hace?}
+El preprocesamiento de datos se puede dividir en varias fases:
 \section{Técnicas de preprocesamiento}
 
 \section{Selección de características}
