--- a/sections/5_desafios.tex
+++ b/sections/5_desafios.tex
@@ -1,5 +1,5 @@
 \chapter{Desafíos y consideraciones éticas}
-\section{Problemas comunes}
+\section{Problemas comunes}\label{sec:issues}
 A la hora de tratar de utilizar y evaluar métodos de detección de anomalías, existen una
 serie de problemas comunes que se deben tener en cuenta:
 
