chapter 3 rework, correcciones, biblio, conclusiones

--- a/biblio.bib
+++ b/biblio.bib
@@ -178,3 +178,90 @@
   journal      = {Departamento de Ciencias de la Computación e Inteligencia Artificial, Universidad de Granada},
   note         = {Presentación de la II Reunión de la Red Temática de Minería de Datos y Aprendizaje, 2004}
 }
+
+@article{zhang2003data,
+  author = {Zhang, Shichao and Zhang, Chengqi and Yang, Qiang},
+  year = {2003},
+  month = {05},
+  pages = {375-381},
+  title = {Data Preparation for Data Mining.},
+  volume = {17},
+  journal = {Applied Artificial Intelligence},
+  doi = {10.1080/713827180}
+}
+
+@article{detours2003integration,
+  author = {Detours, Vincent and Dumont, Jacques E. and Bersini, Hugues and Maenhaut, Carine},
+  title = {Integration and cross-validation of high-throughput gene expression data: comparing heterogeneous data sets},
+  journal = {FEBS Letters},
+  volume = {546},
+  number = {1},
+  pages = {98-102},
+  doi = {https://doi.org/10.1016/S0014-5793(03)00522-2},
+  url = {https://febs.onlinelibrary.wiley.com/doi/abs/10.1016/S0014-5793%2803%2900522-2},
+  eprint = {https://febs.onlinelibrary.wiley.com/doi/pdf/10.1016/S0014-5793%2803%2900522-2},
+  year = {2003}
+}
+
+@article{kim2003taxonomy,
+  author = {Kim, Won and Choi, Byoung-Ju and Hong, Eui and Kim, Soo-Kyung and Lee, Doheon},
+  year = {2003},
+  month = {01},
+  pages = {81-99},
+  title = {A Taxonomy of Dirty Data},
+  volume = {7},
+  journal = {Data Min. Knowl. Discov.},
+  doi = {10.1023/A:1021564703268}
+}
+
+@article{lin2002attribute,
+  author = {Lin, Tsau},
+  year = {2002},
+  month = {02},
+  pages = {213 - 222},
+  title = {Attribute transformations for data mining I: Theoretical explorations},
+  volume = {17},
+  journal = {International Journal of Intelligent Systems},
+  doi = {10.1002/int.10017}
+}
+
+@book{liu2012feature,
+  title={Feature selection for knowledge discovery and data mining},
+  author={Liu, Huan and Motoda, Hiroshi},
+  volume={454},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@inproceedings{ramirez2022cleaning,
+  title={Cleaning Matters! Preprocessing-enhanced Anomaly Detection and Classification in Mobile Networks},
+  author={Ram{\'\i}rez, Juan Marcos and Rojo, Pablo and D{\'\i}ez, Fernando and Mancuso, Vincenzo and Anta, Antonio Fern{\'a}ndez},
+  booktitle={2022 20th Mediterranean Communication and Computer Networking Conference (MedComNet)},
+  pages={103--112},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{guyon2003introduction,
+  title={An Introduction to Variable and Feature Selection},
+  author={Isabelle M Guyon and Andr{\'e} Elisseeff},
+  journal={J. Mach. Learn. Res.},
+  year={2003},
+  volume={3},
+  pages={1157-1182},
+  url={\url{https://api.semanticscholar.org/CorpusID:379259}}
+}
+
+@article{wold1987principal,
+  title = {Principal component analysis},
+  journal = {Chemometrics and Intelligent Laboratory Systems},
+  volume = {2},
+  number = {1},
+  pages = {37-52},
+  year = {1987},
+  note = {Proceedings of the Multivariate Statistical Workshop for Geologists and Geochemists},
+  issn = {0169-7439},
+  doi = {https://doi.org/10.1016/0169-7439(87)80084-9},
+  url = {https://www.sciencedirect.com/science/article/pii/0169743987800849},
+  author = {Svante Wold and Kim Esbensen and Paul Geladi},
+}
