--- a/config.tex
+++ b/config.tex
@@ -34,6 +34,7 @@
 \def\title{Minería de anomalías}
 \def\subject{Inteligencia de Negocio}
 \def\author{Juan Francisco Mier Montoto}
+\def\target{www.mier.info}
 \def\authorid{UO283319}
 \def\date{diciembre 2023}
 \def\org{Escuela Politécnica de Ingeniería de Gijón}
@@ -53,7 +54,7 @@
   \newline \leftmark{}
 }
 \fancyhead[R]{\bfseries{Hoja \thepage{}~de~\pageref{LastPage}}}
-\fancyfoot[C]{\author}
+\fancyfoot[C]{\href{\target}{\author}}
 \renewcommand{\headrulewidth}{0pt} % default is 0pt
 \renewcommand{\footrulewidth}{0.4pt} % default is 0
 
@@ -64,7 +65,7 @@
       \textbf{\SUBJECT} \newline
       \textbf{\title}}}
   \fancyhead[R]{\bfseries{Hoja \thepage{}~de~\pageref{LastPage}}}
-  \fancyfoot[C]{\author}
+  \fancyfoot[C]{\href{\target}{\author}}
   \renewcommand{\headrulewidth}{0pt} % default is 0pt
   \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
 }
