--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -45,7 +45,7 @@ causas comunes que pueden ser identificadas:
 	\item \textbf{Errores en la medición:} todos los datos que se recogen están sometidos a una
 		componente humana y, por lo tanto, a errores. Dichos errores pueden llegar a ser
 		considerados anomalías, por lo que hay que lidiar con ellos en la fase de preprocesamiento.
-		(Ver \nameref{chap:pre})
+		(Ver \nameref{sec:pre})
 \end{itemize}
 
 \section{Historia y evolución}\label{sec:hist}
