--- a/sections/5_desafios.tex
+++ b/sections/5_desafios.tex
@@ -62,7 +62,7 @@ impacto negativo en las personas o entidades involucradas. De otra forma, se pue
 obtener resultados incorrectos o mal interpretados, lo que puede llevar a tomar decisiones
 erróneas.
 
-Como conclusión, es importante tener en cuenta que la minería de anomalías es una herramienta
-muy potente pero con potenciales consecuencias negativas, en especial contra la privacidad
-de individuos y otras partes interesadas. A parte de los problemas éticos, también se deben
-tener en cuenta los problemas legales que se pueden derivar de su uso.
+En conclusión, la minería de anomalías es una herramienta muy potente pero con potenciales
+consecuencias negativas, en especial contra la privacidad de individuos. A parte de los
+problemas éticos, también se deben tener en cuenta los problemas legales que se pueden
+derivar de su uso incorrecto.
