--- a/sections/concl.tex
+++ b/sections/concl.tex
@@ -1,6 +1,31 @@
 \chapter{Conclusiones}
+\section{Anomalías}
+La minería de anomalías es un campo muy interesante que tiene aplicaciones en muchos
+campos diferentes. Este trabajo no tiene un enfoque específico en la inteligencia de
+negocio, sino que abarca un espectro más amplio de aplicaciones. En mi opinión, es
+una parte muy importante de la minería de datos que no se suele tratar en profundidad,
+además de tener un gran potencial en el mundo real.
+
+Es evidente que una gran cantidad de empresas de nuestro sector utilizan técnicas
+propias de detección de anomalías con sistemas muy robustos y complejos, por lo que
+es un tema a tener en cuenta en el futuro.
+
 \section{Aprendizaje}
+A lo largo de este trabajo, he podido profundizar lo visto en clase sobre la minería de
+anomalías, el tema más interesante (en mi opinión) de todos los presentados para este
+trabajo. He aprendido sobre las diferentes técnicas, un pequeño repaso sobre el
+preprocesamiento y, mi parte favorita, he podido investigar las aplicaciones reales
+para los casos de uso vistos.
+
+El tiempo me limita, igual que en mi trabajo anterior sobre \textit{Dashboards}, a
+poder profundizar más, pero creo que es un tema muy interesante que no voy a olvidar
+tan fácilmente.
 
 \section{\LaTeX}
-Este trabajo sirve como introducción personal a \LaTeX{} y a la escritura de documentos formales, preparándome así para el Trabajo Fin de Grado.
-El código fuente de este documento está disponible en un repositorio de GitHub~\cite{source}.
+Este trabajo sirve como mi introducción personal a \LaTeX{} y a la escritura de documentos formales, preparándome así para el Trabajo Fin de Grado.
+El código fuente de este documento está disponible en mi repositorio de GitHub~\cite{source}.
+
+Además de el mero uso del lenguaje de marcado, he aprendido a citar y referenciar de forma correcta,
+he desarrollado un entorno propio de plantillas que me permite crear documentos formales de forma rápida y
+sencilla y he aprovechado mi aprendizaje de todos estos años para mejorar la calidad de mis trabajos,
+cosa que espero que se vea reflejada en la calidad de trabajos futuros.
