imágenes, refinar cosas

--- a/biblio.bib
+++ b/biblio.bib
@@ -265,3 +265,32 @@
   url = {https://www.sciencedirect.com/science/article/pii/0169743987800849},
   author = {Svante Wold and Kim Esbensen and Paul Geladi},
 }
+
+@article{mahalanobis2018generalized,
+  title={On the generalized distance in statistics},
+  author={Mahalanobis, Prasanta Chandra},
+  journal={Sankhy{\=a}: The Indian Journal of Statistics, Series A (2008-)},
+  volume={80},
+  pages={S1--S7},
+  year={2018},
+  publisher={JSTOR}
+}
+
+@book{shewhart1931economic,
+  title={Economic Control of Quality of Manufactured Product},
+  author={Shewhart, W.A.},
+  isbn={9780873890762},
+  lccn={91195803},
+  series={Bell Telephone Laboratories series},
+  url={https://books.google.es/books?id=XBeoAgAAQBAJ},
+  year={1931},
+  publisher={American Society for Quality Control}
+}
+
+@misc{galarnyk2018explaining,
+  author = {Galarnyk, Michael},
+  title = {Explaining the 68-95-99.7 rule for a Normal Distribution},
+  year = {2018},
+  url = {\url{https://www.kdnuggets.com/2018/07/explaining-68-95-99-7-rule-normal-distribution.html}},
+  note = {Towards Data Science}
+}
