--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,8 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{enumitem}
 \usepackage{float}
+\usepackage{hypcap}
+\usepackage{caption}
 
 \usepackage{hyperref} % Paquete para que las referencias funcionen, y permite introducir links
 \usepackage{xcolor} % Paquete para trabajar con colores (fondo de celdas, color del texto...)
