config, captions, imágenes y correcciones

--- a/biblio.bib
+++ b/biblio.bib
@@ -294,3 +294,14 @@
   url = {\url{https://www.kdnuggets.com/2018/07/explaining-68-95-99-7-rule-normal-distribution.html}},
   note = {Towards Data Science}
 }
+
+@article{lee2020monitoring,
+  author = {Lee, Wo Jae and Mendis, Gamini and Triebe, Matthew and Sutherland, John},
+  year = {2020},
+  month = {06},
+  pages = {},
+  title = {Monitoring of a machining process using kernel principal component analysis and kernel density estimation},
+  volume = {31},
+  journal = {Journal of Intelligent Manufacturing},
+  doi = {10.1007/s10845-019-01504-w}
+}
