--- a/config.tex
+++ b/config.tex
@@ -44,6 +44,7 @@
 \def\AREA{\expandafter\MakeUppercase\expandafter{\area}}
 \def\SUBJECT{\expandafter\MakeUppercase\expandafter{\subject}}
 
+\captionsetup{justification=centering}
 \setlength{\headheight}{65pt}
 
 \fancyhf{}
