--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -68,8 +68,8 @@ y son estrategias rudimentarias aun utilizadas en la actualidad.
 \begin{minipage}{\linewidth}
 	\centering
 	\includegraphics[width=\textwidth]{gaussian.png}
-	\captionof{figure}{Regla 68{-}95{-}99.7 para desv.~estándar en
-		medias de distr.~gausianas~\cite{galarnyk2018explaining}}\label{fig:fig1}
+	\captionof{figure}{Regla 68{-}95{-}99.7 para desviación estándar en
+		medias de distribuciones gausianas~\cite{galarnyk2018explaining}}\label{fig:fig1}
 \end{minipage}
 \vspace{1\baselineskip}
 
