--- a/sections/3_pre.tex
+++ b/sections/3_pre.tex
@@ -38,6 +38,14 @@ el caso de la detección de anomalías, es absolutamente necesario realizar un c
 de los datos para poder aplicar las técnicas de detección (ver~\nameref{chap:tecnicas}) de forma
 efectiva.~\cite{ramirez2022cleaning}
 
+\noindent
+\begin{minipage}{\linewidth}
+	\centering
+	\includegraphics[width=\textwidth]{pre.png}
+	\captionof{figure}{Ejemplo de diagrama de flujo de preprocesamiento con detección de
+		anomalías (\textit{KLNX})~\cite{ramirez2022cleaning}}\label{fig:fig3}
+\end{minipage}
+
 Gracias al modelo resultante de la minería de anomalías, se puede mejorar el preprocesamiento de
 conjuntos futuros al descartar outliers durante la fase de limpieza, por lo que se mejora
 retroactivamente la calidad de los datos.
