--- a/biblio.bib
+++ b/biblio.bib
@@ -292,3 +292,27 @@
   journal = {Journal of Intelligent Manufacturing},
   doi = {10.1007/s10845-019-01504-w}
 }
+
+@article{yu2010two,
+  author = {Yu, Jieqi and Haipeng, Zheng and Kulkarni, Sanjeev and Poor, H. Vincent},
+  year = {2010},
+  month = {01},
+  pages = {},
+  title = {Two-Stage Outlier Elimination for Robust Curve and Surface Fitting},
+  volume = {2010},
+  journal = {EURASIP Journal on Advances in Signal Processing},
+  doi = {10.1155/2010/154891}
+}
+
+@article{bae2020effective,
+    author = {Duck-Ho Bae and Seo Jeong and Jiwon Hong and Minsoo Lee and Mirjana Ivanović and Miloš Savić and Sang-Wook Kim},
+    title = {An Effective Approach to Outlier Detection Based on Centrality and Centre-Proximity},
+    journal = {Informatica},
+    volume = {31},
+    number = {3},
+    year = {2020},
+    pages = {435--458},
+    doi = {10.15388/20-INFOR413},
+    issn = {0868-4952},
+    publisher = {Vilnius University Institute of Data Science and Digital Technologies}
+}
