init chapter 7, LOF en 5, fancy links al toc

--- a/main.tex
+++ b/main.tex
@@ -37,11 +37,13 @@
 
 % Índice de contenido
 \addcontentsline{toc}{chapter}{Índice de contenido} % Añade la referencia al índice de contenido
+\hypertarget{toc}{}
 \tableofcontents
 \newpage
 
 % Índice de figuras
 \addcontentsline{toc}{chapter}{Índice de figuras}  % Añade la referencia al índice de contenido
+\hypertarget{lof}{}
 \listoffigures
 
 \justify{} % Texto justificado
