--- a/sections/7_practica.tex
+++ b/sections/7_practica.tex
@@ -1,2 +1,13 @@
 \chapter{Demostración práctica}
+Para complementar el trabajo teórico, se incluye un archivo Jupyter Notebook con
+implementaciones de juguete de ideas y algoritmos vistos.
 
+\section{Distancia de Mahalanobis con distribuciones multivariantes}
+
+\section{Detección de anomalías basada en proximidad}
+
+\section{Detección de anomalías basada en densidad}
+
+\section{Detección de anomalías basada en clusters}
+
+\section{Preprocesado de datos y minería de excepciones en sistema }
