--- a/config.tex
+++ b/config.tex
@@ -54,7 +54,7 @@
     \textbf{\title}}
   \newline \leftmark{}
 }
-\fancyhead[R]{\bfseries{Hoja \thepage{}~de~\pageref{LastPage}}}
+\fancyhead[R]{\bfseries{Hoja \hyperlink{toc}{\thepage}~de~\pageref{LastPage}}}
 \fancyfoot[C]{\href{\target}{\author}}
 \renewcommand{\headrulewidth}{0pt} % default is 0pt
 \renewcommand{\footrulewidth}{0.4pt} % default is 0
@@ -65,7 +65,7 @@
     \hspace{1em} \Longstack[l]{
       \textbf{\SUBJECT} \newline
       \textbf{\title}}}
-  \fancyhead[R]{\bfseries{Hoja \thepage{}~de~\pageref{LastPage}}}
+  \fancyhead[R]{\bfseries{Hoja \hyperlink{toc}{\thepage}~de~\pageref{LastPage}}}
   \fancyfoot[C]{\href{\target}{\author}}
   \renewcommand{\headrulewidth}{0pt} % default is 0pt
   \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
