--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \usepackage{float}
 \usepackage{hypcap}
 \usepackage{caption}
+\usepackage{fancyvrb}
 
 \usepackage{hyperref} % Paquete para que las referencias funcionen, y permite introducir links
 \usepackage{xcolor} % Paquete para trabajar con colores (fondo de celdas, color del texto...)
